[gd_scene load_steps=3 format=3 uid="uid://dpl0klxay4i0"]

[ext_resource type="PackedScene" uid="uid://dc7h40xbumnmm" path="res://src/ui/popup_menu_component.tscn" id="1_5w068"]
[ext_resource type="Script" uid="uid://c1mi2gvqh2s5y" path="res://src/settings/settings_menu.gd" id="1_s5vhc"]

[node name="SettingsMenu" type="PanelContainer"]
custom_minimum_size = Vector2(960, 1500)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -480.0
offset_top = -750.0
offset_right = 480.0
offset_bottom = 750.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(480, 750)
script = ExtResource("1_s5vhc")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 96
text = "Settings"
horizontal_alignment = 1

[node name="CheckBoxEatParticles" type="CheckBox" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Eat Particles"

[node name="PopupMenuComponent" parent="." node_paths=PackedStringArray("popup") instance=ExtResource("1_5w068")]
popup = NodePath("..")

[connection signal="toggled" from="MarginContainer/VBoxContainer/CheckBoxEatParticles" to="." method="_on_check_box_eat_particles_toggled"]
